[package]
name = "deno-plc-build"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
deno_graph = "0.89.4"
deno_lockfile = "0.26.0"
serde = "1.0.219"
serde_json = "1.0.140"
# swc = "16.1.1"
swc_common = "8.0.1"
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"

[patch.crates-io]
deno_ast = { git = "https://github.com/deno-plc/deno_ast_version_patch", branch = "main" }
