[package]
name = "deno-plc-build"
version = "0.1.0"
edition = "2024"

[features]
swc = ["dep:swc_core", "dep:swc_prefresh"]
default = ["swc"]

[dependencies]
axum = "0.8.3"
path-clean = "1.0.1"
serde = "1.0.219"
serde_json = "1.0.140"
static_assertions = "1.1.0"

swc_core = { version = "22.3.1", features = [
    "common",
    "base",
    "common_concurrent",
    "ecma_ast",
    "ecma_transforms",
    "ecma_transforms_react",
    "ecma_transforms_typescript",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
], optional = true } # swc_common = "8.0.1"
swc_prefresh = { version = "0.13.0", optional = true }

threadpool = "1.8.1"
tokio = { version = "1.44.2", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
